@@ -1,3 +1,3 @@
-used-before-assignment:15:10:15:18:only_type_assignment:Using variable 'variable' before assignment:HIGH
-used-before-assignment:28:10:28:18:value_assignment_after_access:Using variable 'variable' before assignment:HIGH
-undefined-variable:62:14:62:17:decorator_returning_incorrect_function.wrapper_with_type_and_no_value:Undefined variable 'var':HIGH
+used-before-assignment:16:10:16:18:only_type_assignment:Using variable 'variable' before assignment:HIGH
+used-before-assignment:29:10:29:18:value_assignment_after_access:Using variable 'variable' before assignment:HIGH
+undefined-variable:63:14:63:17:decorator_returning_incorrect_function.wrapper_with_type_and_no_value:Undefined variable 'var':HIGH
